Bug 77186 - Custom animation timing repeat until next slide doesn't work
Summary: Custom animation timing repeat until next slide doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected
: 106176 121836 122923 (view as bug list)
Depends on:
Blocks: Sidebar-Animation
  Show dependency treegraph
 
Reported: 2014-04-08 16:06 UTC by Nicolas R
Modified: 2021-07-26 10:07 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas R 2014-04-08 16:06:27 UTC
Hello,

In Presentation (LibO 4.1.5.3 - Win 7 pro 64 bits), I try to repeat a custom effect 'blink' ( on a text or on a bitmap) 'until next click' or 'until next slide', the effect repeats only once.

Reproduce :

- new presentation
- click to add a text like 'Hello'
- right click on text box -> 'custom animation' 
- 'Modify effect' -> 'Add' -> 'Emphasis' -> 'Blink' -> 'Ok'
- Then start slideshow with 'F5'
- Click to start effect : 'Hello' blink once

- In 'Custom animation' , right click on the effect then choose 'timing',
- In 'repeat' dropdown list choose 'until next click' or 'until end of slide' then OK.
- Then 'F5' to start slideshow
- Click to start effect : 'Hello' blinks only once.

If you choose to repeat any number of time, it's ok, even for an integer not in dropdown list (you can type in 999 in the repeat field), but for the values 'until next click' or 'until end of slide' there's only one repeat of the effect.

Same behaviour with other effects

Ps : I've a parallel install with version 4.2.2.1 : with this version, repeat are impossible, only 'none' is save in the repeat field.
Comment 1 Nicolas R 2014-04-08 16:56:38 UTC
I don't know if it could help, but it's ok with Apache OpenOffice 4.0
Comment 2 Nicolas R 2014-04-10 07:20:33 UTC
Another test with 3.6.7 ... It's worse. 
'Until end of slide' => blink once
Any number of repeat => not even one blink !
Comment 3 A (Andy) 2014-05-29 13:07:43 UTC
reproducible with LO 4.2.4.2 (Win 8.1)

If I choose 'until next click' or 'until end of slide' it blinks only ones.  If I choose one of the available numbers of repeats (2 - 10) then it also blinks only ones and if I open again the TIMING tab in the EFFECT OPTIONS dialog then it shows no repeat (REPEAT = NONE) and does not keep the number selected before.
Comment 4 Nicolas R 2014-06-23 15:43:38 UTC
As with 4.2.2.1, repeat animation is impossible with 4.2.5.2, only 'none' is save in the repeat field.
Comment 5 cedrcaba 2014-11-22 22:37:58 UTC
Seems to be the continuation of https://bugs.freedesktop.org/show_bug.cgi?id=50833.
Same thing as the three previous comments for 4.3.4.
Comment 6 Paul-Antoine Arras 2015-01-19 15:15:25 UTC
Also reproducible with 4.2.4.2 on Linux.
Comment 7 Gregor 2015-05-05 03:42:18 UTC
Affects 4.4.2.2
(Tested with Spin effect)
Comment 8 QA Administrators 2016-09-20 09:37:56 UTC Comment hidden (obsolete)
Comment 9 Gregor 2017-01-12 01:26:05 UTC
Present in 5.2.4.2
Comment 10 Regina Henschel 2017-02-12 15:14:40 UTC
Still there in Version: 5.4.0.0.alpha0+

The entry in file is smil:repeatCount="indefinite" for "Until end of slide", which is correct. Repeating indefinite works fine in AOO4.1.2.
Comment 11 Xisco Faulí 2017-02-26 20:55:22 UTC
*** Bug 106176 has been marked as a duplicate of this bug. ***
Comment 12 QA Administrators 2018-07-24 02:37:28 UTC Comment hidden (obsolete)
Comment 13 malstrond 2018-10-22 16:03:34 UTC
Yes, the bug is still present in 6.1.2.1.
Comment 14 Xisco Faulí 2018-12-17 12:08:29 UTC
*** Bug 121836 has been marked as a duplicate of this bug. ***
Comment 15 Xisco Faulí 2018-12-17 12:16:36 UTC
Surprisingly, it works in OpenOffice 4.1.3...
Comment 16 Xisco Faulí 2018-12-17 18:20:13 UTC
(In reply to Xisco Faulí from comment #15)
> Surprisingly, it works in OpenOffice 4.1.3...

I've investigated why it works in OpenOffice and it turned out this got fixed in https://cgit.freedesktop.org/libreoffice/core/commit/slideshow/source/engine/animationnodes/animationbasenode.cxx?h=aoo/trunk&id=a9c0b6273e8445557c01a111d807becf887fb67a which wasn't cherry-picked to LibreOffice in favour of https://cgit.freedesktop.org/libreoffice/core/commit/slideshow/source/engine/animationnodes/?id=372c47309a192e67220913309fa1ccffdff8cde1 which later got reworked by https://cgit.freedesktop.org/libreoffice/core/commit/slideshow?id=1ef95a7206979756a885b7bea4c788684f5e7b61

@Marco, any chance you could take a look at it? I suppose it should be really easy for you to fix it now...
Comment 17 Xisco Faulí 2018-12-17 18:26:01 UTC
@mark hung, Since this concerns impress, I thought you could be interested in my comment 16
Comment 18 Commit Notification 2019-02-19 17:26:11 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/cacdb1ae9d9e249737d0b3732e6fd198cfdd9d82%5E%21

tdf#77186 handle time container indefinite repetition.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Xisco Faulí 2019-03-12 13:15:07 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Mark Hung, Thanks for fixing this!

Cherry-picked to 6-2 branch -> https://gerrit.libreoffice.org/#/c/69100/1
Comment 20 Xisco Faulí 2019-03-21 12:17:40 UTC
*** Bug 122923 has been marked as a duplicate of this bug. ***
Comment 21 Commit Notification 2019-03-21 16:16:48 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/6be929b4ec00d69c24c25e16b39a00f79363d878%5E%21

tdf#77186 handle time container indefinite repetition.

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.